@@ -178,7 +178,8 @@ t/0822_Frontend_Sane.t
 t/0823_Frontend_Sane.t
 t/09_EntryCompletion.t
 t/1.gs2p
-t/10_Document.t
+t/101_Document.t
+t/102_Document.t
 t/1111_save_pdf.t
 t/1112_save_pdf_with_locale.t
 t/1113_save_pdf_with_error.t
