@@ -2,6 +2,8 @@
 
 * Added scroll bars to all tabs on scan dialog.
   Closes bug #228 (missing scan+close button on scanning window)
+* Fixed bug copy-pasting pages where subsequent operations on new pages are
+  carried out on old pages.
 
 
 1.5.2 (24.08.2016):
